TOMEE-4318 | TOMEE-4317 - ActiveMQ 6 + Java 17 (#1120)
* TOMEE-4317 - ActiveMQ 6.1.0
Drop related shades.

* Switch Java Level to 17

* Migrate V11 to V17 class constant in jwt tests

* Adds --add-opens for legacy code fragements with libraries not supporting J17+

* Bump maven-plugin-plugin version

* Add ScriptEngine implementation for js on Java 15+

* Add ScriptEngine implementation for js in tomee-embedded-maven-plugin as well

* Add ScriptEngine implementation for js on Java 15+

* Upgrade Mockito to make it work under J17+ env

* Exclude bean validaiton tck tests from "org.hibernate.beanvalidation.tck.tests.constraints.groups.groupconversion.*" as they seem to be broken in BVAL itself with Java 17

* Update GH actions to run with Java 17

* Fix review comments

---------

Co-authored-by: Markus Jung <jungm@apache.org>