@@ -28,7 +28,8 @@
 
   <properties>
     <openejb.home>${project.build.directory}${file.separator}apache-tomee-webprofile-${project.version}</openejb.home>
-    <suiteFile>${project.build.directory}/dependency/beanvalidation-tck-tests-suite.xml</suiteFile>
+<!--    <suiteFile>${project.build.directory}/dependency/beanvalidation-tck-tests-suite.xml</suiteFile>-->
+    <suiteFile>${project.build.directory}/test-classes/beanvalidation-tck-tests-suite.xml</suiteFile>
   </properties>
 
   <dependencies>
@@ -130,16 +131,6 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <useFile>false</useFile>
-          <disableXmlReport>false</disableXmlReport>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
           <execution>
@@ -165,43 +156,38 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire.version}</version>
+        <configuration>
+          <argLine>-Duser.language=en --add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+          <reuseForks>false</reuseForks>
+          <suiteXmlFiles>
+            <suiteXmlFile>${suiteFile}</suiteXmlFile>
+          </suiteXmlFiles>
+          <systemPropertyVariables>
+            <validation.provider>${validation.provider}</validation.provider>
+          </systemPropertyVariables>
+          <parallel>none</parallel>
+          <threadCount>4</threadCount>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>${surefire.version}</version>
         <executions>
           <execution>
-            <id>integration-test</id>
-            <phase>integration-test</phase>
+            <id>generate-test-report</id>
+            <phase>test</phase>
             <goals>
-              <goal>integration-test</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>verify</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>verify</goal>
+              <goal>report-only</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <trimStackTrace>false</trimStackTrace>
-          <systemPropertyVariables>
-            <validation.provider>${validation.provider}</validation.provider>
-          </systemPropertyVariables>
-          <suiteXmlFiles>
-            <suiteXmlFile>${suiteFile}</suiteXmlFile>
-          </suiteXmlFiles>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
+          <outputDirectory>${project.build.directory}/surefire-reports</outputDirectory>
+          <outputName>test-report</outputName>
         </configuration>
-        <dependencies>
-          <!-- failsafe has dependencies on javax -->
-          <dependency>
-            <groupId>org.apache.tomee.bom</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>8.0.10</version>
-            <type>pom</type>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
